--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/ctakada/aprendiendo_node/issues"
   },
-  "homepage": "https://github.com/ctakada/aprendiendo_node#readme"
+  "homepage": "https://github.com/ctakada/aprendiendo_node#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
